# TinyLLM-System

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENT_MANIFEST.json  Dockerfile  Makefile  PLANS.md  README.en.md  README.md  SECURITY.md  TASKS.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/benchmark/: m3_ddp_cpu_test.yaml  m3_tinygpt_120m_ddp.yaml
configs/data/: m2_packing.yaml  m2_processing.yaml  m2_tokenization.yaml  m5_reasoning.yaml
configs/eval/: m2_baseline.yaml  m2_baseline_smoke.yaml  m2_domain_v1.yaml
configs/fsdp2/: qwen3_8b_four_gpu_formal.yaml  tinygpt_debug_gloo_activation_checkpointing_smoke.yaml  tinygpt_debug_gloo_dcp_recovery_smoke.yaml  tinygpt_debug_gloo_smoke.yaml  tinygpt_debug_nccl_bf16_single_gpu_smoke.yaml  tinygpt_debug_nccl_bf16_two_gpu_activation_checkpointing_smoke.yaml  tinygpt_debug_nccl_bf16_two_gpu_smoke.yaml
configs/hardware/: rtx3090_m0.yaml
configs/pretrain/: tinygpt_debug.yaml  tinygpt_debug_cpu_smoke.yaml  tinygpt_debug_ddp_1gpu_bf16_smoke.yaml  tinygpt_debug_ddp_2gpu_bf16_smoke.yaml  tinygpt_debug_ddp_cpu_smoke.yaml  tinygpt_debug_ddp_recovery_2gpu_bf16_smoke.yaml  tinygpt_debug_ddp_recovery_cpu_smoke.yaml  tinygpt_debug_rtx3090_bf16_smoke.yaml
docs/: architecture.md  benchmark_plan.md  career_release_roadmap.md  dataset_contract.md  doctor_contract.md  evaluation_spec.md  experiment_lineage.md  hardware_strategy.md  inference_design.md  m1_training_contract.md  m3_ddp_benchmark_contract.md  m3_ddp_correctness_contract.md  m3_ddp_recovery_contract.md  m4_fsdp2_contract.md  m5_sft_contract.md  nccl_test_plan.md  product_scope.md  public_reporting.md  resume_alignment.md  training_design.md
docs/adr/: 0001-main-platform-rtx3090.md  0002-standard-training-group-8gpus.md  0003-career-release-baselines.md  0004-shared-server-4gpu-acceptance.md  0005-qwen3-gqa-dual-mode-reasoning.md
docs/future/: custom_kv_cache.md  moe.md  tensor_parallel.md
reports/hardware/: nccl_topology.md  rtx3090_inventory.md
reports/m0/: m0_acceptance.md
reports/m1/: atomic_checkpoint_report.md  exact_resume_report.md  foundation_report.md  m1_acceptance.md  native_cpu_trainer_report.md
reports/m2/: baseline_formal.md  baseline_smoke.md  contamination_smoke.md  deterministic_pipeline_smoke.md  (+8 more)
requirements/: README.md  baseline_security_exceptions.md  m4_security_exceptions.md  torch-cpu.txt  torch-cu118.txt  torch-v100-cu118.txt
schemas/: README.md  balance-rejected-record-v1.schema.json  baseline-evaluation-result-v1.schema.json  baseline-run-config-v1.schema.json  benchmark-profile-aggregate-v1.schema.json  benchmark-timing-summary-v1.schema.json  checkpoint-commit-marker-v1.schema.json  checkpoint-manifest-v1.schema.json  commitpackft-import-config-v1.schema.json  communication-measurement-v1.schema.json  contamination-match-v1.schema.json  contamination-report-v1.schema.json  data-import-manifest-v1.schema.json  data-processing-manifest-v1.schema.json  dataset-artifact-file-v1.schema.json  dataset-commit-marker-v1.schema.json  dataset-registration-v1.schema.json  dataset-shard-metadata-v1.schema.json  dataset-shard-pack-v1.schema.json  ddp-benchmark-config-v1.schema.json  ddp-benchmark-matrix-summary-v1.schema.json  ddp-benchmark-run-result-v1.schema.json  ddp-correctness-summary-v1.schema.json  ddp-partition-evidence-v1.schema.json  ddp-recovery-result-v1.schema.json  ddp-training-result-v1.schema.json  distributed-sampler-state-v1.schema.json  domain-baseline-summary-v1.schema.json  domain-item-result-v1.schema.json  evaluation-authored-provenance-v1.schema.json  evaluation-build-config-v1.schema.json  evaluation-item-v1.schema.json  evaluation-set-manifest-v1.schema.json  exact-match-scorer-v1.schema.json  fsdp2-correctness-config-v1.schema.json  fsdp2-correctness-summary-v1.schema.json  fsdp2-rank-evidence-v1.schema.json  fsdp2-rank-failure-evidence-v1.schema.json  fsdp2-recovery-config-v1.schema.json  fsdp2-recovery-result-v1.schema.json  (+52 more)
scripts/: __init__.py  build_m2_domain_eval.py  check_m4_dependencies.py  check_markdown_links.py  check_public_artifacts.py  export_schemas.py  m1_gpu_worker.py  run_m1_checkpoint_smoke.py  run_m1_cpu_smoke.py  run_m1_gpu_interruption_smoke.py  run_m1_resume_smoke.py  run_m2_contamination_smoke.py  run_m2_packing_smoke.py  run_m2_registry_smoke.py  run_m2_tokenizer_smoke.py  run_m3_ddp_benchmark.py  run_m3_ddp_recovery_smoke.py  run_m3_ddp_smoke.py  run_m4_fsdp2_cuda_smoke.py  run_m4_fsdp2_rank_failure_smoke.py  run_m4_qwen_formal.py  run_m5_reasoning_data_smoke.py  run_m5_teacher_smoke.py  run_nccl_matrix.py  summarize_m3_ddp_benchmark.py
tests/: __init__.py
(+226 files in other folders)
