[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyllm-system"
version = "0.1.0"
description = "Hardware-aware LLM training, evaluation, and deployment for consumer multi-GPU systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "TinyLLM-System contributors" }]
dependencies = ["numpy>=1.26,<3"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
tinyllm = "tinyllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "gpu: requires an NVIDIA GPU and is skipped by default CI",
  "integration: crosses module or process boundaries",
]
