[build-system]
requires = ["setuptools>=83,<84", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyllm-system"
version = "0.3.0b1"
description = "Hardware-aware LLM training, evaluation, and deployment for consumer multi-GPU systems."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "TinyLLM-System contributors" }]
dependencies = [
  "numpy>=1.26,<3",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0.2,<7",
  "tokenizers>=0.21.4,<0.23",
  "typer>=0.16,<0.21",
]

[project.urls]
Homepage = "https://github.com/JayYu686/TinyLLM-System"
Issues = "https://github.com/JayYu686/TinyLLM-System/issues"
Repository = "https://github.com/JayYu686/TinyLLM-System.git"

[project.optional-dependencies]
baseline = [
  "accelerate>=1.12,<2",
  "datasets>=4.8,<5",
  "lm-eval>=0.4.12,<0.5",
  "safetensors>=0.6,<0.7",
  "tokenizers>=0.22.2,<0.23",
  "transformers>=4.57.6,<4.58",
]
m4 = [
  "accelerate>=1.12,<2",
  "safetensors>=0.6,<0.7",
  "tokenizers>=0.22.2,<0.23",
  "transformers>=4.57.6,<4.58",
]
dev = [
  "mypy>=1.11,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "setuptools>=83,<84",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
tinyllm = "tinyllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "gpu: requires an NVIDIA GPU and is skipped by default CI",
  "integration: crosses module or process boundaries",
]

[tool.coverage.run]
branch = true
source = ["tinyllm"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
